added test that resoureces can be loaded